Сделал делиты и свагер доделал
